# rust

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.zh.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  CONTRIBUTING.zh.md  Cargo.toml  LICENSE  README.md  README.ru.md  README.zh.md  SECURITY.md  SECURITY.ru.md  SECURITY.zh.md  bench.sh  performance.md
.github/workflows/: ci.yml  release.yml
benches/: parse.rs  vs_json.rs
examples/: basic.rs  upstreams.rs
src/: lib.rs
src/de/: describe.rs  enum_access.rs  from_value.rs  map_access.rs  mod.rs  seq_access.rs  value_deserializer.rs  variant_access.rs
src/error/: error.rs  mod.rs  result.rs  tests.rs
src/parser/: bracket.rs  classify.rs  collecting.rs  frame.rs  insert.rs  mod.rs  parse_str.rs  parser.rs  tests.rs  validate.rs  value_start.rs
src/render/: array_item.rs  helpers.rs  mod.rs  object.rs  pair.rs  render.rs  tests.rs
src/ser/: map_serializer.rs  mod.rs  seq_serializer.rs  struct_serializer.rs  struct_variant_serializer.rs  text_serializer.rs  to_value.rs  tuple_variant_serializer.rs  value_serializer.rs
src/thin/: deserializer.rs  event.rs  event_deserializer.rs  event_parser.rs  fast_num.rs  mod.rs  parser.rs  value.rs
src/value/: mod.rs  object_map.rs  tests.rs  value.rs
tests/: de.rs  doc_example.rs  edge_cases.rs  fixtures.rs  roundtrip.rs  ser.rs  spec_conformance.rs
tests/common/: mod.rs
tests/de/: arrays.rs  enums.rs  errors.rs  keywords.rs  multiline.rs  objects.rs  raw_marker.rs  scalars.rs  typed.rs
tests/edge_cases/: deep_nesting.rs  (+7 more)
(+18 files in other folders)
